tests/errors/variant_flow/switch_with_no_arms.sim

            enum Void { }
            fn f(v: Void) {
              entry:
                switchEnum(v) [ ]
            }
            